# SmartMirror-Gesture-Recognition-OmpSs

./: .gitignore  SmartMirror-Gesture-Recognition-OmpSs.js  node_helper.js
object_detection_ompss/: .clang-format  CMakeLists.txt
object_detection_ompss/cmake/: OmpSs.cmake
object_detection_ompss/cmake/modules/: tensorrt-config.cmake
object_detection_ompss/data/: hand.data  hand.names  yolov4-tiny-hand-3l-2.cfg  yolov4-tiny-hand-3l.cfg
object_detection_ompss/inc/: Timer.h  Types.h  Utils.h  YoloLayerPlugin.h  YoloParser.h  YoloTRT.h  YoloTensorRTWrapper.h
object_detection_ompss/src/: CMakeLists.txt  Hungarian.c  Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  KalmanTrackerWrapper.cpp  KalmanTrackerWrapper.h  MYSort.c  MYSort.h  YoloTensorRTWrapper.cpp  common.h  main.c  main.c_back  main.c_back2  main_TRT.c
object_detection_ompss/src/YoloTensorRT/: SORT.h  Types.h  YoloLayerPlugin.h  YoloParser.h  YoloTRT.h  YoloTensorRTWrapper.cpp  YoloTensorRTWrapper.h
object_detection_ompss/src/cmake/: OmpSs.cmake
object_detection_ompss/src/cmake/modules/: tensorrt-config.cmake
